<resources>
    <string name="app_name">My Application3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="idEnter">Enter your ID</string>
    <string name="error_detected">Object is Null</string>
    <string name="error_writing">Error in writing due to Format or IO exception</string>
    <string name="ok_writing">NID Successfully written</string>
    <string name="ENter">Hello</string>
    <string name="Enter">New Text</string>
    <string name="title_activity_start">StartActivity</string>
</resources>
